// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BallPulseSync> <BallPulseSync> Mount: enzyme.mount 1`] = `
.css-0> div:nth-child(1),
[data-css-0]> div:nth-child(1) {
  animation: animation_1vfh1g0 0.6s -0.14s infinite ease-in-out;
  -webkit-animation: animation_1vfh1g0 0.6s -0.14s infinite ease-in-out;
}

.css-0> div:nth-child(2),
[data-css-0]> div:nth-child(2) {
  animation: animation_1vfh1g0 0.6s -0.07s infinite ease-in-out;
  -webkit-animation: animation_1vfh1g0 0.6s -0.07s infinite ease-in-out;
}

.css-0> div:nth-child(3),
[data-css-0]> div:nth-child(3) {
  animation: animation_1vfh1g0 0.6s 0.00s infinite ease-in-out;
  -webkit-animation: animation_1vfh1g0 0.6s 0.00s infinite ease-in-out;
}

.css-0 > div,
[data-css-0] > div {
  border-radius: 100%;
  height: 15px;
  margin: 2px;
  width: 15px;
  background-color: #ffffff;
  animation-fill-mode: both;
  display: inline-block;
  -webkit-animation-fill-mode: both;
}

<BallPulseSync
  loading={true}
>
  <div
    data-css-0=""
  >
    <div />
    <div />
    <div />
  </div>
</BallPulseSync>
`;

exports[`<BallPulseSync> <BallPulseSync> Render: enzyme.render 1`] = `
.css-0> div:nth-child(1),
[data-css-0]> div:nth-child(1) {
  animation: animation_1vfh1g0 0.6s -0.14s infinite ease-in-out;
  -webkit-animation: animation_1vfh1g0 0.6s -0.14s infinite ease-in-out;
}

.css-0> div:nth-child(2),
[data-css-0]> div:nth-child(2) {
  animation: animation_1vfh1g0 0.6s -0.07s infinite ease-in-out;
  -webkit-animation: animation_1vfh1g0 0.6s -0.07s infinite ease-in-out;
}

.css-0> div:nth-child(3),
[data-css-0]> div:nth-child(3) {
  animation: animation_1vfh1g0 0.6s 0.00s infinite ease-in-out;
  -webkit-animation: animation_1vfh1g0 0.6s 0.00s infinite ease-in-out;
}

.css-0 > div,
[data-css-0] > div {
  border-radius: 100%;
  height: 15px;
  margin: 2px;
  width: 15px;
  background-color: #ffffff;
  animation-fill-mode: both;
  display: inline-block;
  -webkit-animation-fill-mode: both;
}

<div
  data-css-0=""
>
  <div />
  <div />
  <div />
</div>
`;

exports[`<BallPulseSync> <BallPulseSync> Shallow: enzyme.shallow 1`] = `
.css-0> div:nth-child(1),
[data-css-0]> div:nth-child(1) {
  animation: animation_1vfh1g0 0.6s -0.14s infinite ease-in-out;
  -webkit-animation: animation_1vfh1g0 0.6s -0.14s infinite ease-in-out;
}

.css-0> div:nth-child(2),
[data-css-0]> div:nth-child(2) {
  animation: animation_1vfh1g0 0.6s -0.07s infinite ease-in-out;
  -webkit-animation: animation_1vfh1g0 0.6s -0.07s infinite ease-in-out;
}

.css-0> div:nth-child(3),
[data-css-0]> div:nth-child(3) {
  animation: animation_1vfh1g0 0.6s 0.00s infinite ease-in-out;
  -webkit-animation: animation_1vfh1g0 0.6s 0.00s infinite ease-in-out;
}

.css-0 > div,
[data-css-0] > div {
  border-radius: 100%;
  height: 15px;
  margin: 2px;
  width: 15px;
  background-color: #ffffff;
  animation-fill-mode: both;
  display: inline-block;
  -webkit-animation-fill-mode: both;
}

<div
  data-css-0=""
>
  <div />
  <div />
  <div />
</div>
`;
